syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "ApplicationProto";

package application;

// service for application
service ApplicationService {
  // rpcs for application
  rpc Query (ApplicationRequestQuery) returns (ApplicationReplyQuery) {}
  rpc Insert (Application) returns (ApplicationReply) {}
  rpc InsertBatch (ApplicationList) returns (ApplicationReply) {}
  rpc Update (Application) returns (ApplicationReply) {}
  rpc UpdateBatch (ApplicationList) returns (ApplicationReply) {}
  rpc Delete (Application) returns (ApplicationReply) {}
  rpc DeleteBatch (ApplicationList) returns (ApplicationReply) {}
}

message Application {
  int32 id = 1;
  string application_id = 2;
  string build_type = 3;
  string download_url = 4;
  string version_name = 5;
  int32 version_code = 6;
  string description = 7;
  string create_time = 8;
}

message ApplicationList {
  repeated Application list = 1;
}

message ApplicationRequestQuery {
  uint64 page_size = 1;
  uint64 page = 2;
  int32 id = 3;
  string application_id = 4;
  string build_type = 5;
}

message ApplicationReplyQuery {
  repeated Application list = 1;
  uint64 total = 2;
}

message ApplicationReply { bool success = 1; }