syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "LogDetailProto";

package log_detail;

// service for log detail
service LogDetailService {
  // rpcs for log detail
  rpc Query (LogDetailRequestQuery) returns (LogDetailReplyQuery) {}
  rpc Insert (LogDetail) returns (LogDetailReply) {}
  rpc InsertBatch (LogDetailList) returns (LogDetailReply) {}
  rpc Update (LogDetail) returns (LogDetailReply) {}
  rpc UpdateBatch (LogDetailList) returns (LogDetailReply) {}
  rpc Delete (LogDetail) returns (LogDetailReply) {}
  rpc DeleteBatch (LogDetailList) returns (LogDetailReply) {}

}

message LogDetail {
  string id = 1;
  string log_id = 2;
  string content = 3;
  string create_time = 4;
}

message LogDetailList { repeated LogDetail list = 1; }

message LogDetailRequestQuery {
  uint64 page_size = 1;
  uint64 page = 2;
  string id = 3;
}

message LogDetailReplyQuery {
  repeated LogDetail list = 1;
  uint64 total = 2;
}

message LogDetailReply { bool success = 1; }




